任务指纹 + 分词器 + 分层数据检索设计（数据层，抽象数据层，执行流程层）